ppapi/native_client/tests/ppapi_browser/bad/ppapi_bad_crossorigin.nmf
{
  "program": {
    "x86-32": {"url": "http://www.google.com/crossorigin.nexe"},
    "x86-64": {"url": "http://www.google.com/crossorigin.nexe"},
    "arm": {"url": "http://www.google.com/crossorigin.nexe"}
  }
}
